fixed a small issue with virtual events section padding on tablet and mobile size

--- a/css/app.css
+++ b/css/app.css
@@ -977,6 +977,10 @@ p {
         width: 50%;
         margin: var(--spacing-md) 0;
     }
+
+    .virtual-events-section .col-left {
+        padding-left: var(--spacing-sm);
+    }
 }
 
 /* MOBILE SIZE */
